name:            binarydefer
build-type:      Simple
version:         1.0
license:         BSD3
author:          Neil Mitchell
synopsis:        Binary serialization with deferred loading
build-depends:   base
exposed-modules: Data.Binary.Defer,
                 Data.Binary.Defer.List
other-modules:   Data.Binary.Defer.Internal
hs-source-dirs:  .
